# IVS-projekt-2

./: README.md  hodnoceni.txt  odevzdani.txt  skutecnost.txt
plan/: xkloub03_xnguye27_xmorav48_plan.txt
profiling/: perf.data  zprava.txt
src/: Cargo.toml  Makefile  PKGBUILD  data.txt
src/assets/: calc.desktop  fitcalc.desktop
src/calc/: Cargo.toml
src/calc/locales/: cz.yml  en.yml  jp.yml  sk.yml  vi.yml
src/calc/src/: calcstate_tests.rs  delegate.rs  environment.rs  expr_manager.rs  history.rs  lib.rs  main.rs  widgets.rs
src/calc/src/expr_manager/: tests.rs
src/calc/src/widgets/: about.rs  buttons_ui.rs  display.rs  help.rs  history_win.rs  menu.rs
src/math/: Cargo.toml
src/math/src/: engine.rs  error.rs  lib.rs  math_tests.rs  number.rs  token.rs
src/math/tests/: evaluate.rs
src/profiling/: Cargo.toml
src/profiling/src/: main.rs
src/scripts/: postinst  postrm
