[package]
name = "calc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
dark-light = "1.0.0"  # Determine the system theme
druid = { version = "0.8.3", features = ["im"] }
im = "15.1.0"
math = { version = "0.1.0", path = "../math" }
once_cell = "1.17.1"
rust-i18n = "1.1.4"
serde = { version = "1.0.159", features = ["derive"] }

